# raytracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: project.yaml
raytracer/: CMakeLists.txt
raytracer/include/: camera.hpp  canvas.hpp  color.hpp  cone.hpp  cube.hpp  cylinder.hpp  group.hpp  intersections.hpp  lights.hpp  material.hpp  matrix.hpp  obj_file_parser.hpp  pattern.hpp  plane.hpp  point.hpp  ray.hpp  raytracer.hpp  shape.hpp  sphere.hpp  triangle.hpp  tuple.hpp  utils.hpp  vector.hpp  world.hpp
raytracer/snippets/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  CMakeLists.txt
raytracer/src/: camera.cpp  canvas.cpp  color.cpp  cone.cpp  cube.cpp  cylinder.cpp  group.cpp  intersections.cpp  lights.cpp  material.cpp  matrix.cpp  obj_file_parser.cpp  pattern.cpp  plane.cpp  point.cpp  ray.cpp  shape.cpp  sphere.cpp  triangle.cpp  tuple.cpp  vector.cpp  world.cpp
raytracer/tests/: CMakeLists.txt  camera_tests.cpp  canvas_tests.cpp  color_tests.cpp  cone_tests.cpp  cube_tests.cpp  cylinder_tests.cpp  group_tests.cpp  intersections_tests.cpp  lights_tests.cpp  main.cpp  material_tests.cpp  matrix_tests.cpp  obj_file_parser_tests.cpp  pattern_tests.cpp  plane_tests.cpp  ray_tests.cpp  shape_tests.cpp  sphere_tests.cpp  triangle_tests.cpp  tuple_tests.cpp  world_tests.cpp
