add_executable(01 01.cpp)
target_link_libraries(01 raytracer)

add_executable(02 02.cpp)
target_link_libraries(02 raytracer)

add_executable(03 03.cpp)
target_link_libraries(03 raytracer)

add_executable(04 04.cpp)
target_link_libraries(04 raytracer)

add_executable(05 05.cpp)
target_link_libraries(05 raytracer)
