add_executable(01 01.cpp)
target_link_libraries(01 raytracer)

add_executable(02 02.cpp)
target_link_libraries(02 raytracer)

add_executable(03 03.cpp)
target_link_libraries(03 raytracer)

add_executable(04 04.cpp)
target_link_libraries(04 raytracer)

add_executable(05 05.cpp)
target_link_libraries(05 raytracer)

add_executable(06 06.cpp)
target_link_libraries(06 raytracer)

add_executable(07 07.cpp)
target_link_libraries(07 raytracer)

add_executable(08 08.cpp)
target_link_libraries(08 raytracer)

add_executable(09 09.cpp)
target_link_libraries(09 raytracer)

add_executable(10 10.cpp)
target_link_libraries(10 raytracer)
